samples/bad/bad003.lat
// Repeated argument name
int main() {
   return f(1, 1);
}

int f(int x, int x) {
  return 1;
}